--- a/gestion/pom.xml
+++ b/gestion/pom.xml
@@ -10,6 +10,14 @@
   	<url>https://github.com/JavierLobo</url>
   	<name>Javier Lobo</name>
   </organization>
+  
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.2.4.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+  
   <modules>
     <module>gestion-rest</module>
     <module>gestion-logic</module>
