--- a/gestion/gestion-persistence/src/main/resources/application.properties
+++ b/gestion/gestion-persistence/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=${server.port1}
-#spring.datasource.driver-class-name=${spring.datasource.driver-class-name1}
-#spring.datasource.url=${spring.datasource.url1}
-#spring.datasource.username=${spring.datasource.username1}
-#spring.datasource.password=${spring.datasource.password1} 
+spring.datasource.driver-class-name=${spring.datasource.driver-class-name1}
+spring.datasource.url=${spring.datasource.url1}
+spring.datasource.username=${spring.datasource.username1}
+spring.datasource.password=${spring.datasource.password1} 
+
+
+#server.port=0
+#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+#spring.datasource.url=jdbc:mongo://192.168.1.68:27017/gescoches
+#spring.datasource.username=root
+#spring.datasource.password=locutus
