--- a/servicesdata.yml
+++ b/servicesdata.yml
@@ -3,5 +3,5 @@ server:
   datasource:
     driver-class-name: mongodb.jdbc.MongoDriver
     url1: jdbc:mongo://192.168.1.68:27017/gescoches
-    username1: user
-    password1: 12345
+    username1: root
+    password1: locutus
