(DEV) Change the structure of the packages
(DEV) Cambios en la estructura de los paquete para que esté organizada
(CFG) Corrección en la configuración del archivo 'application.yml'

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -8,4 +8,5 @@ spring:
     config:
       server:
         git:
-          uri: http://github.com/javerlobo/gescoches  profiles:    active: dev
+          uri: https://github.com/JavierLobo/gescoches
+          profiles:  active: dev
