(CFG) Correct configuration to enable the service

--- a/gestion/gestion-persistence/src/main/resources/application.properties
+++ b/gestion/gestion-persistence/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 server.port=${server.port1}
-spring.datasource.driver-class-name=${spring.datasource.driver-class-name1}
-spring.datasource.url=${spring.datasource.url1}
-spring.datasource.username=${spring.datasource.username1}
-spring.datasource.password=${spring.datasource.password1} 
-
-
-#server.port=0
-#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
-#spring.datasource.url=jdbc:mongo://192.168.1.68:27017/gescoches
-#spring.datasource.username=root
-#spring.datasource.password=locutus
+spring.data.mongodb.authentification-database=${spring.data.mongodb.authentification-database1}
+spring.data.mongodb.username=${spring.data.mongodb.username1}
+spring.data.mongodb.password=${spring.data.mongodb.password1}
+spring.data.mongodb.database=${spring.data.mongodb.database1}
+spring.data.mongodb.port=${spring.data.mongodb.port1}
+spring.data.mongodb.host=${spring.data.mongodb.host1}
